# shared-memory-pycpp-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  abstract_ipc.cpp  abstract_ipc.h  abstract_ipc.py  build.sh  consumer_ipc.h  dialog.cpp  dialog.h  dialog.py  dialog.ui  producer_ipc.h  producer_ipc.py  run.sh  shared_memory.py
cmake/: Findcppystruct.cmake
prodcon_ipc/: __init__.py  abstract_ipc.py  consumer_ipc.py  producer_ipc.py
src/: main.cpp  producer_ipc.cpp
src/prodcon_ipc/: abstract_ipc.cpp  abstract_ipc.h  consumer_ipc.cpp  consumer_ipc.h  producer_ipc.cpp  producer_ipc.h
src/ui/: dialog.cpp  dialog.h
